some things optimized, problems with summary tiles remain